--- a/FMI_Parking_System/frontend/login/css/login_form_styles.css
+++ b/FMI_Parking_System/frontend/login/css/login_form_styles.css
@@ -153,7 +153,7 @@ input, .custom-select {
 	animation: show 0.6s;
 }
 
-/* Error message */
+/* Error message login*/
 #response-message {
     box-sizing: border-box;
     margin-top: 1.5rem;
@@ -180,6 +180,36 @@ input, .custom-select {
     width: 70px;
     height: 60px;
 }
+
+/* Error message register */
+#response-message-register {
+    box-sizing: border-box;
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+    padding: 1rem;
+    background-color: var(--responseMessage);
+    box-shadow: 0 0 1rem var(--responseMessageBox);
+    justify-content: space-evenly;
+}
+
+#response-message-register span {
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#response-message-register span p {
+    margin: 0;
+    text-align: center;
+}
+
+#response-message-register img {
+    width: 70px;
+    height: 60px;
+}
+
+
 
 .no-show {
     display: none !important;
@@ -265,4 +295,8 @@ input, .custom-select {
 
 .container.right-panel-active .overlay-right {
 	transform: translateX(20%);
+}
+
+#registration-form{
+	overflow-y: scroll;
 }
