--- a/FMI_Parking_System/frontend/login/css/login_form_styles.css
+++ b/FMI_Parking_System/frontend/login/css/login_form_styles.css
@@ -129,6 +129,7 @@ input, .custom-select {
 	top: 0;
 	height: 100%;
 	transition: all 0.6s ease-in-out;
+	overflow-y: scroll;
 }
 
 /* Devide into two parts */
